--- a/src/components/DurationSelection.css
+++ b/src/components/DurationSelection.css
@@ -46,6 +46,8 @@
   max-width: 800px;
   width: 100%;
   margin-top: 4rem;
+  position: relative;
+  z-index: 10;
 }
 
 .duration-title {
